--- a/gis2d.css
+++ b/gis2d.css
@@ -1,4 +1,5 @@
-#bottomleft, #toggle-measure, #toggle-identify, #zoom, #pan { 
+/* This file needs to be streamlined to avoid this awkward positioning */
+#bottomleft, #toggle-measure, #toggle-identify, #zoom, #pan, #overlayUI { 
 	position: absolute;
 	top: 2%;
 	}
@@ -46,7 +47,24 @@ body {
 	}
 #gis2d-map {
 	margin-top: 4%;
+	z-index: 1;
 	}
 #measureHidden {
 	display: none;
+	}
+#overlayUI { 
+	left: 35%;
+	}
+#overlays {
+	top: 10%;
+	left: 74%;
+	position: fixed;
+	z-index: 3;
+	display: block;
+	border: 1px solid blue;
+	background-color: lightblue;
+	height: 55%;
+	width: 15%;
+	padding-left: 5px;
+	padding-right: 5px;
 	}
